feat: 创建自动分类记录管理页面
- 创建 app/templates/account_classification/batches.html 模板
- 在 account_classification.py 中添加 /batches 路由
- 在 base.html 导航菜单中添加自动分类记录链接
- 参考同步记录页面设计，提供批次列表和详情查看功能
- 支持按批次类型、状态、时间范围筛选
- 显示批次统计信息和执行详情

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -203,6 +203,9 @@
                             <li><a class="dropdown-item" href="{{ url_for('sync_sessions.index') }}">
                                 <i class="fas fa-tasks me-2"></i>同步会话管理
                             </a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('account_classification.batches') }}">
+                                <i class="fas fa-tags me-2"></i>自动分类记录
+                            </a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{{ url_for('database_types.index') }}">
                                 <i class="fas fa-database me-2"></i>数据库类型管理
@@ -308,7 +311,7 @@
     <!-- 通用工具组件 -->
     <script src="{{ url_for('static', filename='js/common/console-utils.js') }}"></script>
     <script src="{{ url_for('static', filename='js/common/alert-utils.js') }}"></script>
-    
+
     <!-- 权限查看组件 -->
     <script src="{{ url_for('static', filename='js/common/permission-viewer.js') }}"></script>
     <script src="{{ url_for('static', filename='js/common/permission-modal.js') }}"></script>
